Added files via upload
updated version of my thesis

--- a/Main.tex
+++ b/Main.tex
@@ -34,13 +34,12 @@
 \thesistype{Undergraduate Thesis}
 \thesisdocument{Thesis}
 
-\defensedate{October 29, 2009} %indicate the month, day and year the research was defended
-\submitmonth{November} %indicate the month the manuscript was submitted to the CS office
-\submityear{2009} %indicate the year the manuscript was submitted to the Math Office
-
+\defensedate{April 2016} %indicate the month, day and year the research was defended
+\submitmonth{June} %indicate the month the manuscript was submitted to the CS office
+\submityear{2016} %indicate the year the manuscript was submitted to the Math Office
 
 \adviser{John Benedict T. Ayawan}%main adviser
-\reader{Precious Jane F. Lapura} %thesis panel
+\reader{Philip Lester P. Benjamin, Ph.D.} %thesis panel
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% highlight \bothabsenttrue if the student has only one adviser and one reader
@@ -50,18 +49,17 @@
   
 \bothabsenttrue
 
-\coadviser{co-Adviser, Ph.D.} 
+%\coadviser{Precious Jane F. Lapura} 
 %\coadvisetrue  
 % Make the \coadvisetrue as a comment if there is no adviser
 
-%\coreader{Co-Reader's Name}  %leave this blank if there is a coadviser
-
+%\coreader{Precious Jane F. Lapura}  %leave this blank if there is a coadviser
+%\coreadertrue
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chairman{Jonnifer R. Sinogaya, Ph.D.} 
 
-\abs{Type your abstract here.  Your abstract should have a minimum
-of 150 words and a maximum of 300 words.}
+\abs{This paper will establish the Molecular Topological Index $MTI$ of the Monocyclic Graph $C_k(s,t)$ by calculating its Degree Distance Index and Zagreb Index. The general equation of the MTI of $C_k(s,t)$ will be derived from the general formula of the Wiener Index, Degree Distance Index and Zagreb Index of the Monocyclic graph $C_k(s,t)$ that is shown by this study. The calculations of their indices will depend on the parameters $k,s,t$ of the graph $C_k(s,t)$}
 
 \acknowledge{Type your acknowledgements here. It is customary to acknowledge special assistance from
 extramural agencies. There is no obligation that assistance received from members of the dissertation or
@@ -88,7 +86,7 @@ scholarly nature of the work. Your name and the date should not appear on this p
 \include{chap1}
 \include{chap2}
 \include{chap3}
-%\include{chap4}
+\include{chap4}
 
 
 \appendix
