--- a/chap1.tex
+++ b/chap1.tex
@@ -27,7 +27,7 @@ The main objective of the study is to derive the Molecular Topological Index $MT
 The study would verify the results using manual inspection and calculation, using applications (Microsoft Excel) and simple codes written in C (Codeblocks).
 
 \section{Scope and Delimitation of the Study}
-The study is be limited only to undirected, connected Monocylic graphs with two adjacent vertices at $C_k$ with attached $s$ and $t$ pendant vertices respectively. The study would only concern to undirected graphs that would mean the absence of multiple loops and edges.
+The study is limited only to undirected, connected Monocylic graphs with two adjacent vertices at $C_k$ with attached $s$ and $t$ pendant vertices respectively. The study would only concern to undirected graphs, that would mean the absence of multiple loops and edges.
 
 \section{Significance of the Study}
 The study would be a good outset for Chemical graph theory, especially that there are organic compounds that are monocyclic by nature. Results would be useful as molecular descriptors that would be helpful for physical, biological and chemical activity of the compound being studied. Furthermore, this would be a good start-up for future studies especially for those field of interest includes MTI and Monocyclic graphs.
