--- a/chap2.tex
+++ b/chap2.tex
@@ -71,34 +71,34 @@ $$\pic
 \end{figure}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, a graph $G$ is illustrated with vertex set: $V(G)=\left\lbrace  v_1,v_2,v_3,v_4\right\rbrace  $, and edge set: $E(G)=\left\lbrace (v_1,v_2),(v_1,_3),(v_1,v_4),(v_2,v_3),(v_3,v_4),(v_2,v_4),(v_4,v_5)\right\rbrace$.
+In figure \ref{fig:graphG}, a graph $G$ is illustrated with vertex set: $V(G)=\left\lbrace  v_1,v_2,v_3,v_4\right\rbrace  $, and edge set: $E(G)=\left\lbrace (v_1,v_2),(v_1,_3),(v_1,v_4),(v_2,v_3),(v_3,v_4),(v_2,v_4),(v_4,v_5)\right\rbrace$.
 \end{e.g.}
 
-\begin{defn}[Neighbor of a vertex]\rm
+\begin{defn}[Neighbor of a Vertex]\rm
 \cite{lapura}If $e = [u, v]$ is an edge, then $u$ and $v$ are said to be adjacent vertices and that edge $e$ is incident with $u$ and $v$. We also say that $u$ is a neighbor of $v$ . We may also denote the edge joining $u$ and $v$ by $uv$, and the set of neighbors of $v$ by $N(v)$.
 \end{defn}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, vertex $v_3$ in graph $G$ has neighbor vertices $N(v_3)=\left\lbrace v_2,v_1,v_4 \right\rbrace $. 
+In figure \ref{fig:graphG}, vertex $v_3$ in graph $G$ has neighbor vertices $N(v_3)=\left\lbrace v_2,v_1,v_4 \right\rbrace $. 
 \end{e.g.}
 
-\begin{defn}[Order and Size of a graph] \rm
+\begin{defn}[Order and Size of a Graph] \rm
 \cite{lapura}The order of the graph $G$ is the number of vertices of $G$ and denoted by $|V (G)|$, while the size of the graph $G$ is the number of edges of $G$
 and denoted by $|E(G)|$. The graph $G$ is even or odd according as its order is
 even or odd.
 \end{defn}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, the \textbf{order} of graph $G$ is $|V(G)|=5$, while the \textbf{size} of graph $G$ is $|E(G)|=7$. 
+In figure \ref{fig:graphG}, the \textbf{order} of graph $G$ is $|V(G)|=5$, while the \textbf{size} of graph $G$ is $|E(G)|=7$. 
 \end{e.g.}
 
-\begin{defn}[Degree of a vertex]\rm
+\begin{defn}[Degree of a Vertex]\rm
 \cite{gt}The degree of the vertex $v$ in a graph $G$ is the number of
 edges incident to $v$ and denoted by $degG(v)$, or simply by $deg v$ if the graph $G$ is clear from the context.
 \end{defn}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, the degree of vertices $v_1,v_2,v_3$ is just $3$, which means $deg(v_1)=deg(v_2)=deg(v_3)=3$.
+In \figure ref{fig:graphG}, the degree of vertices $v_1,v_2,v_3$ is just $3$, which means $deg(v_1)=deg(v_2)=deg(v_3)=3$.
 \end{e.g.}
 
 \begin{defn}[Distance between $u$ and $v$] \rm
@@ -117,15 +117,15 @@ In \ref{fig:graphG}, the degree of vertices $v_1,v_2,v_3$ is just $3$, which mea
 \end{defn}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, $d(v_1,v_2)=d(v_1,v_3)=d(v_1,v_4)=d(v_2,v_3)=d(v_2,v_4)=d(v_3,v_4)=1$.
+In figure \ref{fig:graphG}, $d(v_1,v_2)=d(v_1,v_3)=d(v_1,v_4)=d(v_2,v_3)=d(v_2,v_4)=d(v_3,v_4)=1$.
 \end{e.g.}
 
-\begin{defn}[Pendant of a vertex] \rm
+\begin{defn}[Pendant of a Vertex] \rm
 \cite{lapura} A vertex $v$ is a \textit{pendant vertex} of a graph $G$ if $degG(v=1)$ and the edge incident to pendant vertex is called a \textbf{pendant edge}.
 \end{defn}
 
 \begin{e.g.}\rm
-In \ref{fig:graphG}, it is illustrated that $v_4$ has a pendant vertex $v_5$.
+In figure \ref{fig:graphG}, it is illustrated that $v_4$ has a pendant vertex $v_5$.
 \end{e.g.}
 
 \begin{defn}[Path]\rm
@@ -147,7 +147,7 @@ $$\pic
 \end{figure}
 
 \begin{e.g.}\rm
-In \ref{fig:path5}, a path $P_5$ is illustrated. It has 5 distinct vertices $[v_1,v_2, v_3,v_4,v_5]$ and 4 edges $[v_1v_2,v_2v_3,v_3v_4,v_4v_5]$.
+In figure \ref{fig:path5}, a path $P_5$ is illustrated. It has 5 distinct vertices $[v_1,v_2, v_3,v_4,v_5]$ and 4 edges $[v_1v_2,v_2v_3,v_3v_4,v_4v_5]$.
 \end{e.g.}
 
 \begin{defn}[Cycle]\rm
@@ -168,7 +168,7 @@ $$\pic
 \end{figure}
 
 \begin{e.g.}\rm
-In \ref{fig:cycle4} shows a cycle $C_4$ with 4 vertices and 4 edges. 
+In figure \ref{fig:cycle4} shows a cycle $C_4$ with 4 vertices and 4 edges. 
 \end{e.g.}
 
 \begin{defn}[Connected Graph]\rm
@@ -195,7 +195,7 @@ $$
 \end{figure}
 
 \begin{e.g.}\rm
-In \ref{fig:con_G}, a connected graph $G$ is presented. It is evident that at any pair of vertices in $G$, there exist at least one path connecting the two vertices. The list of the paths in \ref{fig:con_G} are $v_1-v_2,v_1-v_3,v_1-v_4,v_1-v_5,v_1-v_6,v_2-v_3,v_2-v_4,v_2-v_5,v_2-v_6,v_3-v_4,v_3-v_5,v_3-v_6,v_4-v_5,v_5-v_6$. 
+In figure \ref{fig:con_G}, a connected graph $G$ is presented. It is evident that at any pair of vertices in $G$, there exist at least one path connecting the two vertices. The list of the paths in figure \ref{fig:con_G} are $v_1-v_2,v_1-v_3,v_1-v_4,v_1-v_5,v_1-v_6,v_2-v_3,v_2-v_4,v_2-v_5,v_2-v_6,v_3-v_4,v_3-v_5,v_3-v_6,v_4-v_5,v_5-v_6$. 
 \end{e.g.}
 
 \begin{defn}[Monocyclic Graph]\rm
@@ -237,13 +237,13 @@ $$
 \end{figure}
 
 \begin{e.g.}\rm
-In \ref{fig:c6(3,3)}, a \textit{monocyclic graph} $C_6(3,3)$ is illustrated, where the graph contains only one cycle which is $C_6$ and attached with $(s,t)=(3,3)$ number of pendant vertices in the two adjacent vertices of $C_6$. 
+In figure \ref{fig:c6(3,3)}, a monocyclic graph $C_6(3,3)$ is illustrated, where the graph contains only one cycle which is $C_6$ and attached with $(s,t)=(3,3)$ number of pendant vertices in the two adjacent vertices of $C_6$. 
 \end{e.g.}
 
 \section{Some Concepts in Topological Indices}
 
-\begin{defn}[Diameter of $G$]\rm
-\cite{esalih} The \textbf{diameter of $G$} denoted by $D(G)$ is define as the maximum distance between any vertices of $G$, that is, $D(G)=max\left\lbrace d(u,v):\forall(u,v)\in V(G)^2 \right\rbrace$.
+\begin{defn}[Diameter of Graph $G$]\rm
+\cite{esalih} The \textbf{diameter of $G$} denoted by $D(G)$ is define as the maximum distance between any vertices of $G$, that is, $$D(G)=max\left\lbrace d(u,v):\forall(u,v)\in V(G)^2 \right\rbrace$$.
 \label{sec:D(u,v)}
 \end{defn}
 
@@ -279,35 +279,37 @@ $$
 \end{figure}
 
 \begin{e.g.}\rm
-A cycle graph in \ref{fig:c_5} has a diameter of 2 and in \ref{fig:c_6} has a diameter of 3.
+A cycle graph in figure \ref{fig:c_5} has a diameter of 2 and in figure \ref{fig:c_6} has a diameter of 3.
 \end{e.g.}
 
-\begin{lem}\rm
-\cite{esalih}Let $G$ be any connected digraph, without loops and multiple edges, then $w(u,G)=\sum_{v\in V(G)}d(u,v)$, where $w(u,G)$ is the wiener index at $u$ and $d(u,v)$ is the distance between vertices $u$ and $v$.
-\label{sec:lem_wiener_u}
-\end{lem}
-
-\begin{lem}\rm
-\cite{esalih}$C_n$ is a cycle planar graph $n\geq 2$ with $n$ number of vertices and $m$ number of vertices where $m=n$. For $i=1,2,\cdots,n$
-$$
-w(v_i,C_n)=\left\lbrace\begin{array}{cc}
-\frac{n^2}{4} & $if n is even \\ 
-(\frac{(n+1)(n-1)}{4} & $if k is odd$$
-$$
-\label{sec:wiener_vi}
-\end{lem}
-
-\begin{defn}[Wiener index]\rm 
+\begin{defn}[Wiener Index]\rm 
 \cite{wiener_trees_mg} The \textbf{Wiener index} of the graph $G$ equals to the sum of distances between all pairs of vertices of the respective molecular graph. That is, $W(G)=\sum_{\left\lbrace u,v \right\rbrace \in V(G)} d(u,v)$.
 \label{sec:wiener}
 \end{defn}
 
-\begin{thm}\rm
+\begin{lem}[Wiener Index at $u$ of graph $G$]\rm
+\cite{esalih}Let $G$ be any connected digraph, without loops and multiple edges, then $w(u,G)=\sum_{v\in V(G)}d(u,v)$, where $w(u,G)$ is the wiener index at $u$ and $d(u,v)$ is the distance between vertices $u$ and $v$.
+\label{sec:lem_wiener_u}
+\end{lem}
+
+\begin{lem}[Wiener Index at $v_i$ of cycle graph $C_k$]\rm
+\cite{esalih}$C_k$ is a cycle planar graph $k\geq 3$ with $k$ number of vertices and $m$ number of vertices where $m=k$. For $i=1,2,\cdots,k$
+$$
+w(v_i,C_k)=\left\lbrace\begin{array}{cc}
+\frac{k^2}{4} & $if k is even \\ 
+\frac{(k+1)(k-1)}{4} & $if k is odd
+\end{array}
+$$
+\label{sec:wiener_vi}
+\end{lem}
+
+\begin{thm}[Wiener Index of a $k-$Cycle Graph]\rm
 \cite{apam}The Wiener index of a $k$-cycle $W(C_k)$ is 
 $$
 W(C_k)=\left\lbrace\begin{array}{cc}
 \frac{k^3}{8} & $if k is even \\ 
-(\frac{k(k+1)(k-1)}{8} & $if k is odd$$
+\frac{k(k+1)(k-1)}{8} & $if k is odd
+\end{array}
 $$
 \label{sec:wiener_cycle}
 \end{thm}
