--- a/chap4.tex
+++ b/chap4.tex
@@ -1,4 +1,39 @@
 \chapter{Summary and Recommendation}
 \label{chap:summary}
 
+\section{Summary}
+Let $C_k(s,t)$ be a monocyclic graph with $s$ and $t$ pendant vertices attached to $C_k$ at vertices $v_1$ and $v_k$ and let $x\in V(C_k)$. In this study, we generalized the formula of the following topological indices:
+\begin{enumerate}
+\item {Wiener Index of Monocyclic Graph $C_k(s,t)$\\
+$$
+W(C_k(s,t))=\frac{1}{2}[2s^2+2t^2-2s-2t+6st+w(x,C_k)(2s+2t+k)+2ks+2kt]
+}
 
+\item {Degree Distance Index of Monocyclic Graph $C_k(s,t)$\\
+$$
+DD(C_k(s,t))=3s^2+3t^2-2s-2t+10st+2w(x,C_k)(2s+2t+k)+3ks+3kt
+}
+
+\item {Zagreb Index of $C_k(s,t)$\\
+$$
+Zg(C_k(s,t))=s^2+t^2+8s+8t+4k
+$$
+}
+
+\item {Molecular Topological Index of $C_k(s,t)$\\
+$$
+MTI(C_k(s,t))=4s^2+4t^2+6s+6t+10st+2w(x,C_k)(2s+2t+k)+3sk+3kt+4k
+$$
+}
+\end{enumerate}
+where $
+w(x,C_k)=\left\lbrace\begin{array}{cc}
+\frac{k^2}{4} & $if k is even \\ 
+\frac{k(k+1)(k-1)}{4} & $if k is odd
+\end{array}
+$
+\\
+\section{Recommendation}
+Now that we had generalized the topological indices in the previous chapters by using the parameters $k,s,$ and $t$, we can also calculate other topological indices for future studies. On the other hand, instead of using Monocyclic Graphs we can also pick other graphs like the Sunflower Graph, Spiderweb or Cobweb Graph and others.
+
+\medskip In this study, we assume $v_1$ and $v_k$ to be adjacent. What if $v_1$ and $v_k$ are not adjacent? Perhaps, we could start another study in relation to this as an extension of this paper. We could also study a specific monocyclic graph with all vertices at $C_k$ attached with pendant vertices.    
